@@ -1,5 +1,12 @@
 2006-02-12  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb),
+	(node_removed_cb):
+
+	Use the right action name.
+
+2006-02-12  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-session.c: (save_yourself_cb):
 
 	Reqeust interaction with the client when there are
